--- a/familleHangman.html
+++ b/familleHangman.html
@@ -12,6 +12,7 @@
   <title>La famille</title>
 </head>
 <body style="background-color: rgb(240, 225, 140); margin: 0 10% 0 10%">
+  <div class="return"><a href="index.html" style="font-size: 2rem">Flashcard</a>
   <div class="container">
     <h1 class="text-center">Hangman</h1>
     <div class="text-center">
@@ -22,7 +23,7 @@
     </div> 
   </div>
 
-  <div class="return"><a href="payMenu.html"><img src="/files/images/arrow.png" style="width:50px; height:50px"></a>
+  
     <div class="float-right">Wrong Guesses: <span id='mistakes'>0</span> of <span id='maxWrong'></span></div>
   </div>
 </body>
