--- a/familleScramble.html
+++ b/familleScramble.html
@@ -11,11 +11,12 @@
 
   <title>Word Scramble Game</title>
   <script src="../JS/words.js" defer></script>
-  <script src="../JS/payScramble.js" defer></script>
+  <script src="../JS/familleScramble.js" defer></script>
   <link rel="stylesheet" href="../CSS/Scramble.css">
   
 </head>
 <body>
+  <div class="return"><a href="familleHangman.html">Hangman</a></div><div class="return"><a href="cFlashcard.html">Flashcard</a></div>
   <div id="title-name">
     <h1>Les pays</h1>
   </div>
