--- a/familleScramble.html
+++ b/familleScramble.html
@@ -10,9 +10,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 
   <title>Word Scramble Game</title>
-  <script src="../JS/words.js" defer></script>
-  <script src="../JS/familleScramble.js" defer></script>
-  <link rel="stylesheet" href="../CSS/Scramble.css">
+  <script src="JS/words.js" defer></script>
+  <script src="JS/familleScramble.js" defer></script>
+  <link rel="stylesheet" href="CSS/Scramble.css">
   
 </head>
 <body>
