--- a/familleHangman.html
+++ b/familleHangman.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="../JS/words.js" defer></script>
-  <script src="../JS/familleHangman.js" defer></script>
+  <script src="JS/words.js" defer></script>
+  <script src="JS/familleHangman.js" defer></script>
   <!-- Bootstrap 4 CDN -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <!-- <link rel="stylesheet" href="../CSS/wordlist.css"> -->
