--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     
     
-    <script src="../JS/cFlashcard.js"></script>
+    <script src="JS/cFlashcard.js"></script>
 
   </body>
 </html>
