--- a/Hangman.html
+++ b/Hangman.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="JS/words.js" defer></script>
-  <script src="JS/familleHangman.js" defer></script>
+  <script src="words.js" defer></script>
+  <script src="familleHangman.js" defer></script>
   <!-- Bootstrap 4 CDN -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <!-- <link rel="stylesheet" href="../CSS/wordlist.css"> -->
-  <title>La famille</title>
+  <title>Hangman</title>
 </head>
 <body style="background-color: rgb(240, 225, 140); margin: 0 10% 0 10%">
   <div class="return"><a href="index.html" style="font-size: 2rem">Flashcard</a>
