--- a/flashcard.html
+++ b/flashcard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flash card App</title>
+    <title>flashcard</title>
     <link href="flashcard.css" rel="stylesheet" type="text/css">
 
   </head>
