--- a/flashcard.html
+++ b/flashcard.html
@@ -9,7 +9,7 @@
 
   </head>
   <body onload="getRandomTerm()">
-    <div class="return"><a href="Hangman.html" style="font-size: 2rem">Hangman</a></div><div class="return">
+    <div class="return"><a href="index.html" style="font-size: 2rem">Hangman</a></div><div class="return">
     
     <h1 class="title-name">Flashcard - Perse word list 1</h1>
     <div class="container">
