--- a/Hangman.html
+++ b/Hangman.html
@@ -12,7 +12,7 @@
   <title>Hangman</title>
 </head>
 <body style="background-color: rgb(240, 225, 140); margin: 0 10% 0 10%">
-  <div class="return"><a href="flashcard.html" style="font-size: 2rem">Flashcard</a>
+  <div class="return"><a href="index.html" style="font-size: 2rem">Flashcard</a>
   <div class="container">
     <h1 class="text-center">Hangman</h1>
     <div class="text-center">
