--- a/Hangman.html
+++ b/Hangman.html
@@ -16,7 +16,7 @@
   <div class="container">
     <h1 class="text-center">Hangman</h1>
     <div class="text-center">
-      <img id='hangmanPic' src="../images/0.png" alt="">
+      <img id='hangmanPic' src="0.png" alt="">
       <p id="wordSpotlight" style="font-size: large;">The word to be guessed goes here</p>
       <div id="keyboard"></div>
       <button class="btn btn-info" onClick="reset()">Reset</button>
